Fix button length on mobile

--- a/src/app/public/css/home.component.css
+++ b/src/app/public/css/home.component.css
@@ -77,7 +77,8 @@ h3 {
   z-index: 1000;
 }
 
-.btn-lg {
+#home-home .btn-lg
+#home-discover .btn-lg {
   width: 100%;
   height:100%;
   flex: 1;
